--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "private": true,
   "dependencies": {
     "@aws-amplify/ui-react": "^6.1.13",
-    "@aws-sdk/client-s3": "^3.633.0",
+    "@aws-crypto/sha256-browser": "^5.2.0",
+    "@aws-sdk/client-s3": "^3.645.0",
+    "@aws-sdk/middleware-expect-continue": "^3.620.0",
     "@aws-sdk/s3-request-presigner": "^3.633.0",
+    "@smithy/protocol-http": "^4.1.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "aws-amplify": "^6.4.1",
+    "aws-amplify": "^6.6.0",
     "axios": "^1.7.2",
     "date-fns": "^3.6.0",
     "jwt-decode": "^4.0.0",
@@ -20,7 +23,8 @@
     "react-helmet-async": "^2.0.5",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "webpack": "^5.94.0"
   },
   "scripts": {
     "start": "react-scripts start",
