--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-easy-crop": "^5.2.0",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^2.0.5",
+    "react-qr-code": "^2.0.15",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
