--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@aws-amplify/ui-react": "^6.1.13",
     "@aws-crypto/sha256-browser": "^5.2.0",
     "@aws-sdk/client-s3": "^3.645.0",
+    "@aws-sdk/lib-storage": "^3.787.0",
     "@aws-sdk/middleware-expect-continue": "^3.620.0",
     "@aws-sdk/s3-request-presigner": "^3.633.0",
     "@smithy/protocol-http": "^4.1.1",
