--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.7.2",
     "date-fns": "^3.6.0",
     "react": "^18.3.1",
+    "react-countup": "^6.5.3",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
     "react-easy-crop": "^5.2.0",
@@ -25,6 +26,7 @@
     "react-qr-code": "^2.0.15",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
+    "recharts": "^2.15.3",
     "web-vitals": "^2.1.4",
     "webpack": "^5.94.0"
   },
